<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt_personalData"
        android:textSize="20dp"
        android:textColor="#440404"
        android:typeface="serif">
    </TextView>
    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            android:layout_weight="1">
        </TextView>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/ph_firstName"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:layout_weight="1">
        </TextView>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/ph_lastName"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_weight="1">
        </TextView>

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/ph_email"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:layout_weight="1">
        </TextView>

        <EditText
            android:id="@+id/birth_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/ph_birth_date"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:layout_weight="1">
        </TextView>

        <EditText
            android:id="@+id/upd_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/ph_upd_password"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        style=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_password"
        android:textSize="10dp">
    </TextView>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:id="@+id/lol"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bn_put"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="putData"
            android:text="@string/bt_put"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:textColor="#fff"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></View>
    </LinearLayout>

</LinearLayout>