<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>
    <TextView
        style=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt_m_login"
        android:textSize="20dp"
        android:textColor="#440404"
        android:typeface="serif">
    </TextView>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_admin"
        android:id="@+id/bt_iamadmin"
        android:background="@drawable/custom_button"
        android:textColor="#fff"/>
    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_customer"
        android:id="@+id/bt_iamacustomer"
        android:background="@drawable/custom_button"
        android:textColor="#fff"/>
</LinearLayout>